--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@ body{
     background: #e6e2e5;
 }
 
-.head{
-    width: 1024px; 
-    height: 200px;   
+.wrapper{
+    width: 1024px;      
     margin: 0 auto;
+    
+}
+
+.head-block{
     background: linear-gradient(to top right, #a07094 9%, #111 100%);
     position: relative;
 }
@@ -64,7 +67,7 @@ body{
     margin-left: 10px;    
 }
 
-.list ul li::after{
+.list::after{
     content: '';
     display: block;
     clear: both;
@@ -109,12 +112,6 @@ body{
     background: linear-gradient(to top right, #a07094 49%, #111 100%);
 }
 
-.side-bar::after{
-    content: '';
-    display: block;
-    clear: both;
-}
-
 .block-menu{
     margin: 30px 0 200px 0;
 }
@@ -147,6 +144,13 @@ body{
     margin-left:23%;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.content::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
 
 h1{
     text-align: center;  
@@ -189,15 +193,14 @@ a[href="#up"]{
     margin-top: 10px;
 }
 /*---footer---*/
-.footer{
-    background: linear-gradient(to top right, #a07094 9%, #111 100%);
-    height: 100px;
-    margin-top: 30px;
-    position: relative;    
+.footer-block{
+    background: linear-gradient(to top right, #a07094 9%, #111 100%);    
+    margin-top: 30px;       
 }
 
-.footer span{
-    position: absolute;
-    bottom: 5px;
-    left:10px;
+.text-block{
+    padding: 90px 0 10px 30px;
+    color: #fff;    
 }
+
+
