--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
     margin: 0;
     padding: 0;
 }
+
+@font-face {
+    font-family: 'iron_man';
+    src: url('font/16957-webfont.woff2') format('woff2'),
+         url('font/16957-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body{
     background: #e6e2e5;
 }
@@ -156,6 +165,7 @@ h1{
     text-align: center;  
     text-transform: uppercase; 
     padding: 15px 0 15px 0; 
+    font-family: 'iron_man';
 }
 
 .text-list{
